--- a/Movies.ipynb
+++ b/Movies.ipynb
@@ -24,8 +24,8 @@
    "source": [
     "### Some questions: \n",
     " - General Time Series\n",
-    "     - Has runtime inceased over the years?\n",
-    "     - \n",
+    "     - Has average runtime changed over time?\n",
+    "     - Has average budget or average revenue changed over time?\n",
     " - Director and cast impact on revenue/popularity\n",
     "     - What directors and cast members are associated with high revenue (revenue_adj)?\n",
     "     - What directors and cast members are associated with high popularity (and/or vote_average)?\n",
