addition of financial columns (section 5)

--- a/Movies.ipynb
+++ b/Movies.ipynb
@@ -830,12 +830,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#create financial ratio column\n",
+    "df_clean['revenue_budget_ratio'] = df_clean['revenue_adj']/df_clean['budget_adj']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "financial_series = df_clean[df_clean.revenue_adj.notnull()].revenue_adj\n",
+    "\n",
+    "# revenue level markers\n",
+    "percent_90 = np.percentile(financial_series,90)\n",
+    "percent_75 = np.percentile(financial_series,75)\n",
+    "median = np.median(financial_series)\n",
+    "percent_25 = np.percentile(financial_series,25)\n",
+    "\n",
+    "rev_levels = list()\n",
+    "for row in range(df_clean.shape[0]):\n",
+    "    if df_clean['revenue_adj'][row] >= percent_90:\n",
+    "        rev_levels.append('very_high')\n",
+    "    elif (df_clean['revenue_adj'][row] >= percent_75) & (df_clean['revenue_adj'][row] < percent_90):\n",
+    "        rev_levels.append('high')\n",
+    "    elif (df_clean['revenue_adj'][row] >= median) & (df_clean['revenue_adj'][row] < percent_75):\n",
+    "        rev_levels.append('medium')\n",
+    "    elif (df_clean['revenue_adj'][row] >= percent_25) & (df_clean['revenue_adj'][row] < median):\n",
+    "        rev_levels.append('low')\n",
+    "    elif df_clean['revenue_adj'][row] < percent_25:\n",
+    "        rev_levels.append('vevy_low')\n",
+    "    else:\n",
+    "        rev_levels.append(np.nan)\n",
+    "df_clean['revenue_levels'] = rev_levels"
+   ]
   }
  ],
  "metadata": {
