moved exploration questions; added header

--- a/Movies.ipynb
+++ b/Movies.ipynb
@@ -19,25 +19,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Guiding questions: \n",
-    "Some questions about the data to motivate exploration.\n",
-    " - General Time Series\n",
-    "     - Has average runtime changed over time?\n",
-    "     - Has average budget or average revenue changed over time?\n",
-    " - Director and cast impact on revenue/popularity\n",
-    "     - What directors and cast members are associated with high revenue (revenue_adj)?\n",
-    "     - What directors and cast members are associated with high popularity (and/or vote_average)?\n",
-    "     - Are there frequent occurences of directors and cast?\n",
-    " - Genres\n",
-    "     - What genres are associated with high revenues and high popularity?\n",
-    "     - Are certain genres released at certain times of the year?\n",
-    "     - Have certain genres increased in occurence over time?"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -869,6 +850,28 @@
     "    else:\n",
     "        rev_levels.append(np.nan)\n",
     "df_clean['revenue_levels'] = rev_levels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Exploration\n",
+    "\n",
+    "### Some Questions of Interest: \n",
+    "Some questions about the data to motivate exploration.\n",
+    " - General Time Series\n",
+    "     - Has average runtime changed over time?\n",
+    "     - Has average budget or average revenue changed over time?\n",
+    "     - Does average revenue change by month?\n",
+    " - Director and cast impact on revenue/popularity\n",
+    "     - What directors and cast members are associated with high revenue (revenue_adj)?\n",
+    "     - What directors and cast members are associated with high popularity (and/or vote_average)?\n",
+    "     - Are there frequent occurences of directors and cast?\n",
+    " - Genres\n",
+    "     - What genres are associated with high revenues and high popularity?\n",
+    "     - Are certain genres released at certain times of the year?\n",
+    "     - Have certain genres increased in occurence over time?"
    ]
   }
  ],
