add introduction and header

--- a/Movies.ipynb
+++ b/Movies.ipynb
@@ -1,8 +1,28 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Understanding the Driving Factors Behind Movie Success\n",
+    "A Data Investigation by Stuart Miller\n",
+    "\n",
+    "- [Website](null) \n",
+    "- [Twitter](https://twitter.com/rpnuser)\n",
+    "- [GitHub](https://github.com/sjmiller8182)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Introduction\n",
+    "The film industry, being very large, generates high revenues. Many movies are created to generate this level of revenue and not all of these films are successful. In fact, high-profile, expensive movies sometimes 'flop' or loose huge amouts of money. For instances, it was reported that \"John Carter\" (2012) lost approximately [$200 million USD](https://www.thisisinsider.com/movie-flops-over-the-years-2018-2#2012). With the TheMovieDB dataset from [Udacity](https://www.udacity.com/) (originally from [Kaggle](https://www.kaggle.com/tmdb/tmdb-movie-metadata/home)), I will look at what factors correlate to movie success."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,10 +31,11 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
     "import datetime\n",
     "from collections import defaultdict, Counter\n",
-    "from visuals import time_plot"
+    "from visuals import time_plot\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
